--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "joyyserver",
   "version": "0.0.1",
   "description": "Node.js server for joyy",
+  "repository": "git://github.com/AndyWei/joyyserver.git",
   "main": "index.js",
   "scripts": {
     "setup": "./setup.js",
@@ -30,6 +31,8 @@
     "nodemailer": "^1.3.0",
     "nodemailer-markdown": "^1.0.0",
     "object-assign": "^2.0.0",
+    "pg": "^4.3.0",
+    "pg-native": "^1.8.0",
     "slug": "^0.8.0",
     "visionary": "^2.0.0"
   },
