--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "confidence": "^1.0.0",
     "glue": "^2.0.0",
     "handlebars": "^3.0.0",
-    "hapi": "^8.0.0",
+    "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
     "hapi-mongo-models": "^1.1.0",
+    "hapi-node-postgres": "^2.1.1",
     "hoek": "^2.4.1",
     "jade": "^1.5.0",
     "joi": "^5.0.2",
     "lout": "^6.0.0",
     "mongodb": "^1.4.23",
+    "node-constants": "0.0.2",
     "node-uuid": "^1.4.1",
     "nodemailer": "^1.3.0",
     "nodemailer-markdown": "^1.0.0",
@@ -42,5 +44,8 @@
     "nodemon": "^1.2.1",
     "promptly": "^0.2.0",
     "proxyquire": "^1.1.0"
+  },
+  "engines": {
+    "node": ">= 0.12.0"
   }
 }
