--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "test": "./node_modules/lab/bin/lab -c -L",
     "test-cover": "./node_modules/lab/bin/lab -c -r html -o ./test/artifacts/coverage.html && open ./test/artifacts/coverage.html"
   },
-  "author": "Andy Wei <andyweius@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "async": "^0.9.0",
     "bcrypt": "^0.8.0",
@@ -27,8 +25,7 @@
     "jade": "^1.5.0",
     "joi": "^5.0.2",
     "lout": "^6.0.0",
-    "mongodb": "^1.4.23",
-    "node-uuid": "^1.4.1",
+    "node-constants": "0.0.2",
     "nodemailer": "^1.3.0",
     "nodemailer-markdown": "^1.0.0",
     "object-assign": "^2.0.0",
