--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "bcrypt": "^0.8.0",
+    "bcrypt": "^0.8.1",
     "boom": "^2.5.1",
     "confidence": "^1.0.0",
+    "enum": "^2.0.0",
     "glue": "^2.0.0",
+    "good": "^5.1.2",
+    "good-console": "^4.1.0",
     "handlebars": "^3.0.0",
     "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
@@ -25,14 +28,15 @@
     "jade": "^1.5.0",
     "joi": "^5.0.2",
     "lout": "^6.0.0",
-    "node-constants": "0.0.2",
     "nodemailer": "^1.3.0",
     "nodemailer-markdown": "^1.0.0",
     "object-assign": "^2.0.0",
     "pg": "^4.3.0",
     "pg-native": "^1.8.0",
     "slug": "^0.8.0",
-    "visionary": "^2.0.0"
+    "underscore": "^1.8.2",
+    "visionary": "^2.0.0",
+    "winston": "^0.9.0"
   },
   "devDependencies": {
     "code": "^1.2.0",
@@ -42,6 +46,6 @@
     "proxyquire": "^1.1.0"
   },
   "engines": {
-    "node": ">= 0.12.0"
+    "node": "0.12.0"
   }
 }
