--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "handlebars": "^3.0.0",
     "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
+    "hapi-auth-bearer-token": "^3.1.1",
     "hapi-mongo-models": "^1.1.0",
     "hapi-node-postgres": "^2.1.1",
     "hoek": "^2.4.1",
