Introduced Redis cache and added tokenmanager.js

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git://github.com/AndyWei/joyyserver.git",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint server test",
+    "lint": "eslint server test server.js index.js",
     "setup": "./setup.js",
     "start": "./node_modules/nodemon/bin/nodemon.js -e js,md server",
     "test": "./node_modules/lab/bin/lab -c",
@@ -15,6 +15,7 @@
     "async": "^0.9.0",
     "bcrypt": "^0.8.1",
     "boom": "^2.5.1",
+    "catbox-redis": "^1.0.4",
     "confidence": "^1.0.0",
     "enum": "^2.0.0",
     "glue": "^2.0.0",
@@ -34,6 +35,7 @@
     "nodemailer-markdown": "^1.0.0",
     "pg": "^4.3.0",
     "pg-native": "^1.8.0",
+    "rand-token": "^0.2.1",
     "slug": "^0.8.0",
     "underscore": "^1.8.2",
     "visionary": "^2.0.0",
