--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "joyyserver",
+  "private": true,
   "version": "0.0.1",
   "description": "Node.js server for joyy",
   "repository": "git://github.com/AndyWei/joyyserver.git",
@@ -25,7 +26,6 @@
     "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
     "hapi-auth-bearer-token": "^3.1.1",
-    "hapi-mongo-models": "^1.1.0",
     "hapi-node-postgres": "^2.1.1",
     "hoek": "^2.4.1",
     "jade": "^1.5.0",
@@ -38,8 +38,7 @@
     "rand-token": "^0.2.1",
     "slug": "^0.8.0",
     "underscore": "^1.8.2",
-    "visionary": "^2.0.0",
-    "winston": "^0.9.0"
+    "visionary": "^2.0.0"
   },
   "devDependencies": {
     "code": "^1.2.0",
