--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joyyserver",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Node.js server for joyy",
   "repository": "git://github.com/AndyWei/joyyserver.git",
   "main": "index.js",
@@ -19,33 +19,24 @@
     "catbox-redis": "^1.0.4",
     "confidence": "^1.0.0",
     "enum": "^2.0.0",
-    "glue": "^2.0.0",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
-    "handlebars": "^3.0.0",
-    "hapi": "^8.2.0",
+    "hapi": "^8.4.0",
     "hapi-auth-basic": "^2.0.0",
     "hapi-auth-bearer-token": "^3.1.1",
     "hapi-node-postgres": "^2.1.1",
     "hoek": "^2.4.1",
-    "jade": "^1.5.0",
     "joi": "^6.0.8",
-    "lout": "^6.0.0",
-    "nodemailer": "^1.3.0",
-    "nodemailer-markdown": "^1.0.0",
     "pg": "^4.3.0",
     "pg-native": "^1.8.0",
     "rand-token": "^0.2.1",
-    "slug": "^0.8.0",
-    "underscore": "^1.8.2",
-    "visionary": "^2.0.0"
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "code": "^1.2.0",
     "lab": "^5.0.1",
     "nodemon": "^1.2.1",
-    "object-assign": "^2.0.0",
-    "promptly": "^0.2.0"
+    "object-assign": "^2.0.0"
   },
   "engines": {
     "node": "0.12.0"
