--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -1,4 +1,4 @@
-REVIEWBOARD_URL = "https://reviewboard.joyy.biz/"
+REVIEWBOARD_URL = "http://reviewboard.joyy.biz/"
 REPOSITORY = "joyyserver"
 BRANCH = "master"
 LAND_DEST_BRANCH = "master"
