--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -2,3 +2,4 @@ REVIEWBOARD_URL = "http://reviewboard.joyy.biz/"
 REPOSITORY = "joyyios"
 BRANCH = "master"
 LAND_DEST_BRANCH = "master"
+TARGET_PEOPLE = "ping"
