Implemented cache filter for media/nearby

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hoek": "^2.14.0",
     "ioredis": "^1.6.1",
     "joi": "^6.5.0",
+    "long": "^2.2.5",
     "pg": "^4.4.0",
     "pg-native": "^1.8.1",
     "rand-token": "^0.2.1",
