--- a/joyyios/Info.plist
+++ b/joyyios/Info.plist
@@ -25,9 +25,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationUsageDescription</key>
-	<string>Your location will be used to search service providers.</string>
+	<string>Winking need your location to search people nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Your location will be used to search service providers.</string>
+	<string>Winking need your location to search people nearby.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
