--- a/joyyios/Info.plist
+++ b/joyyios/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>WinkRock</string>
 	<key>CFBundleExecutable</key>
@@ -88,5 +86,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>en_US</string>
 </dict>
 </plist>
